--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -24,24 +24,31 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Get latest tag
-        id: get_latest_tag
+      - name: Get version from package.json
+        id: package_version
         run: |
-          latest_tag=$(git describe --tags --abbrev=0 2>/dev/null || echo "v0.0.0")
-          echo "latest_tag=${latest_tag}" >> $GITHUB_OUTPUT
+          version=$(node -p "require('./package.json').version")
+          echo "current_version=v${version}" >> $GITHUB_OUTPUT
 
       - name: Calculate next version
-        id: semver
-        uses: paulhatch/semantic-version@v5.3.0
-        with:
-          tag_prefix: "v"
-          version_format: "${major}.${minor}.${patch}"
-          bump_each_commit: false
-          search_commit_body: false
-          user_format_type: "csv"
-          enable_prerelease_mode: false
-          major_pattern: "(MAJOR)"
-          minor_pattern: "(MINOR)"
+        id: next_version
+        run: |
+          current_version=${{ steps.package_version.outputs.current_version }}
+          IFS='.' read -r major minor patch <<< "${current_version#v}"
+
+          case "${{ github.event.inputs.release_type }}" in
+            "major")
+              new_version="$((major + 1)).0.0"
+              ;;
+            "minor")
+              new_version="${major}.$((minor + 1)).0"
+              ;;
+            "patch")
+              new_version="${major}.${minor}.$((patch + 1))"
+              ;;
+          esac
+
+          echo "version=${new_version}" >> $GITHUB_OUTPUT
 
       - name: Generate changelog
         id: changelog
@@ -55,8 +62,8 @@ jobs:
       - name: Create Release
         uses: softprops/action-gh-release@v1
         with:
-          tag_name: v${{ steps.semver.outputs.version }}
-          name: Release v${{ steps.semver.outputs.version }}
+          tag_name: v${{ steps.next_version.outputs.version }}
+          name: Release v${{ steps.next_version.outputs.version }}
           body: ${{ steps.changelog.outputs.changelog }}
           draft: false
           prerelease: false
