--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -50,6 +50,25 @@ jobs:
 
           echo "version=${new_version}" >> $GITHUB_OUTPUT
 
+      - name: Manual Release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          VERSION: ${{ steps.next_version.outputs.version }}
+        run: |
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git config --global user.name "github-actions[bot]"
+
+          # Update version in package.json
+          npm version $VERSION --no-git-tag-version
+
+          # Commit the version change
+          git add .
+          git commit -m "chore: release v${VERSION}"
+
+          # Push the version change commit
+          git push
+
       - name: Generate Changelog
         id: changelog
         run: |
@@ -69,7 +88,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: v${{ teps.next_version.outputs.version }}
+          tag_name: v${{ steps.next_version.outputs.version }}
           release_name: v${{ steps.next_version.outputs.version }}
           body: ${{ env.CHANGELOG }}
           draft: false
