--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -64,7 +64,7 @@ jobs:
 
           # Commit the version change
           git add .
-          git commit -m "chore: release v${VERSION}"
+          git commit -m "chore(release): v${VERSION}"
 
           # Push the version change commit
           git push
@@ -93,23 +93,3 @@ jobs:
           body: ${{ env.CHANGELOG }}
           draft: false
           prerelease: false
-
-      # - name: Generate changelog
-      #   id: changelog
-      #   uses: mikepenz/release-changelog-builder-action@v4
-      #   with:
-      #     fromTag: ${{ steps.get_latest_tag.outputs.latest_tag }}
-      #     toTag: HEAD
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      # - name: Create Release
-      #   uses: softprops/action-gh-release@v2
-      #   with:
-      #     tag_name: v${{ steps.next_version.outputs.version }}
-      #     name: v${{ steps.next_version.outputs.version }}
-      #     body: ${{ steps.changelog.outputs.changelog }}
-      #     draft: false
-      #     prerelease: false
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
