--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -84,7 +84,7 @@ jobs:
           } >> $GITHUB_ENV
 
       - name: Create GitHub Release
-        uses: actions/create-release@v1
+        uses: softprops/action-gh-release@v2
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
