--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -13,7 +13,8 @@ on:
           - major
 
 jobs:
-  test:
+  unit-tests:
+    name: Unit Tests
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -39,6 +40,7 @@ jobs:
         run: pnpm test
 
   build:
+    name: Build
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -57,10 +59,17 @@ jobs:
       - name: Build
         run: pnpm build
 
+      - name: Upload build artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: build-artifacts
+          path: .output/
+          retention-days: 1
+
   create-release:
     name: Create Release
     runs-on: ubuntu-latest
-    needs: [test, build]
+    needs: [unit-tests, build]
     permissions:
       contents: write
 
@@ -69,6 +78,12 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+
+      - name: Download build artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: build-artifacts
+          path: .output
 
       - name: Get version from package.json
         id: package_version
@@ -140,5 +155,6 @@ jobs:
           tag_name: v${{ steps.next_version.outputs.version }}
           release_name: v${{ steps.next_version.outputs.version }}
           body: ${{ env.CHANGELOG }}
+          files: .output/**
           draft: false
           prerelease: false
