--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -71,8 +71,9 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: build-artifacts
-          path: .output/
+          path: .output/chrome-mv3/
           retention-days: 1
+          if-no-files-found: error
 
   create-release:
     name: Create Release
@@ -91,7 +92,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: build-artifacts
-          path: .output
+          path: .output/chrome-mv3
 
       - name: Get version from package.json
         id: package_version
@@ -163,6 +164,6 @@ jobs:
           tag_name: v${{ steps.next_version.outputs.version }}
           release_name: v${{ steps.next_version.outputs.version }}
           body: ${{ env.CHANGELOG }}
-          files: .output/**
+          files: .output/chrome-mv3/**
           draft: false
           prerelease: false
