--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -67,11 +67,16 @@ jobs:
           echo "Listing current directory:"
           ls -la
 
+      - name: Create zip archive
+        run: |
+          zip -r extension-build.zip .output/
+          echo "Created extension-build.zip"
+
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
         with:
           name: build-artifacts
-          path: .output/chrome-mv3/
+          path: extension-build.zip
           retention-days: 1
           if-no-files-found: error
 
@@ -92,7 +97,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: build-artifacts
-          path: .output/chrome-mv3
+          path: .
 
       - name: Get version from package.json
         id: package_version
@@ -164,6 +169,6 @@ jobs:
           tag_name: v${{ steps.next_version.outputs.version }}
           release_name: v${{ steps.next_version.outputs.version }}
           body: ${{ env.CHANGELOG }}
-          files: .output/chrome-mv3/**
+          files: extension-build.zip
           draft: false
           prerelease: false
